tests/sema/bad/28_call_impure_in_pure.sg
fn imp(x:int)->int { return x + 1; }
@pure fn f()->int { return imp(1); } // error: calling impure in pure